test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_none_is_not_any_1.plx
pub fn incr_x(x: *i32) none; 

pub fn main(none) i32 {
    x: i32 = -1
    incr_x(@x)
    return x
}

pub fn incr_x(x: *i32) any {
    x[] = x[] + 1
}
